e2/styles/nav.css
nav {
	left: 50%;
	width: 100%;
	transform: translate(-50%, 0);
	text-align: center;
	/* Offset from normal document flow. Required for flexbox display. */
	position: relative;
}

nav ul {
	display: flex;
	flex-wrap: wrap;
	/* Center items in flexbox. */
	justify-content: center;
	/* Disable text selection. */
	user-select: none;
}

header nav ul li a {
	padding: 10px 20px 10px 20px;
	display: block;
}

header nav ul li {
	/* Position spacing. */
	height: fit-content;
	margin: 20px 10px 20px 10px;
	border-radius: 10px;
}

header nav ul li[data-icon="menu"] {
	/* Hide menu icon if screen is large enough to show all items. */
	display: none;
}

/* Spacing for icons, except for the menu one. */
header nav ul li a[data-icon]:not([data-icon="menu"])::before {
	margin-right: 10px;
}

/* Colour theme. */
header nav ul li.nav-active {
	color: var(--primary-colour);
	background-color: var(--secondary-colour);
}

header nav ul li:hover {
	color: var(--primary-colour);
}

/* Borders. */
header nav ul li {
	border-width: 2px;
	border-style: solid;
	border-color: transparent;
}

header nav ul li:hover {
	border-color: var(--primary-colour);
}

@media screen and (max-width: 715px) and (min-width: 451px) {

	/* Filter out menu label. */
	header nav ul li a span {
		/* Hide text. */
		display: none;
	}

	/* Remove spacing after icons. */
	header nav ul li a[data-icon]:not([data-icon="menu"])::before {
		margin-right: 0;
	}
}

@media screen and (max-width: 450px) {

	header nav ul li:not([data-icon="menu"]):not(.nav-active) {
		/* Hide all except active item and menu icon. */
		/* Same style as the vh class. */
		position: absolute;
		overflow: hidden;
		clip: rect(0 0 0 0);
		height: 1px;
		width: 1px;
		margin: -1px;
		padding: 0;
		border: 0;
	}

	header nav ul li {
		/* Expand all menu items. */
		width: fit-content;
		/* Change spacing. */
		margin: 10px 0 10px 0;
		/* Remove borders. */
		border-width: 0;
	}

	/* Reset background colour for active item. */
	header nav ul li.nav-active {
		color: inherit;
		background-color: inherit;
	}

	header nav ul {
		/* Navigation bar with solid fill. */
		color: var(--primary-colour);
		background-color: var(--secondary-colour);
	}

	header nav ul li[data-icon="menu"] {
		/* Show menu. */
		width: fit-content;
		display: inherit;
		/* Force right alignment. */
		position: absolute;
		right: 0px;
	}

	header nav {
		margin-bottom: 30px;
	}
}

